fix: update expressive code styles and improve spacing in global styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,4 +55,8 @@
   details summary::-webkit-details-marker {
     display:none;
   }
+
+  div.expressive-code:not(:last-child) {
+    margin-bottom: 1rem;
+  }
 }
